Shifted directories around

--- a/RpgGameHub/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/RpgGameHub/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.ExternalLoginConfirmationViewModel
+﻿@model RpgGameHub.Core.ViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
