--- a/RpgGameHub/Views/Account/Register.cshtml
+++ b/RpgGameHub/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.RegisterViewModel
+﻿@model RpgGameHub.Core.ViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
