--- a/RpgGameHub/Views/Account/ResetPassword.cshtml
+++ b/RpgGameHub/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.ResetPasswordViewModel
+﻿@model RpgGameHub.Core.ViewModels.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
