--- a/RpgGameHub/Views/Account/SendCode.cshtml
+++ b/RpgGameHub/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.SendCodeViewModel
+﻿@model RpgGameHub.Core.ViewModels.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
