--- a/RpgGameHub/Views/Account/VerifyCode.cshtml
+++ b/RpgGameHub/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.VerifyCodeViewModel
+﻿@model RpgGameHub.Core.ViewModels.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
