--- a/RpgGameHub/Views/Manage/AddPhoneNumber.cshtml
+++ b/RpgGameHub/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.AddPhoneNumberViewModel
+﻿@model RpgGameHub.Core.ViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
