--- a/RpgGameHub/Views/Manage/ChangePassword.cshtml
+++ b/RpgGameHub/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.ChangePasswordViewModel
+﻿@model RpgGameHub.Core.ViewModels.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
