--- a/RpgGameHub/Views/Manage/SetPassword.cshtml
+++ b/RpgGameHub/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.SetPasswordViewModel
+﻿@model RpgGameHub.Core.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
