--- a/RpgGameHub/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/RpgGameHub/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.VerifyPhoneNumberViewModel
+﻿@model RpgGameHub.Core.ViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
