--- a/RpgGameHub/Views/Account/ForgotPassword.cshtml
+++ b/RpgGameHub/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.ForgotPasswordViewModel
+﻿@model RpgGameHub.Core.ViewModels.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
