--- a/RpgGameHub/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/RpgGameHub/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.ExternalLoginListViewModel
+﻿@model RpgGameHub.Core.ViewModels.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
