--- a/RpgGameHub/Views/Manage/ManageLogins.cshtml
+++ b/RpgGameHub/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model RpgGameHub.Models.ManageLoginsViewModel
+﻿@model RpgGameHub.Core.ViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
