Added Create Meetup  logic to update the database. Began work to add Meetup display

--- a/RpgGameHub/Views/Shared/_Layout.cshtml
+++ b/RpgGameHub/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Gems", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Add a Meetup", "Create", "Meetup")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
