--- a/RpgGameHub/Content/Site.css
+++ b/RpgGameHub/Content/Site.css
@@ -106,3 +106,12 @@ body , h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     background-color: #555be6;
 }
 
+.navbar-inverse .navbar-nav > .dropdown > a:hover .caret {
+    border-top-color: #ffffff;
+    border-bottom-color: #ffffff;
+}
+
+.navbar-inverse .navbar-nav > .dropdown > a .caret {
+    border-top-color:white;
+    border-bottom-color:white;
+}
