--- a/RpgGameHub/Views/Shared/_Layout.cshtml
+++ b/RpgGameHub/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - TAKWare</p>
+            <p>&copy; @DateTime.Now.Year - TAKWare LLC</p>
         </footer>
     </div>
 
