--- a/RpgGameHub/Views/Shared/Meetups.cshtml
+++ b/RpgGameHub/Views/Shared/Meetups.cshtml
@@ -2,7 +2,7 @@
 @using RpgGameHub.Core.Models;
 @using RpgGameHub.Extensions;
 @{
-    ViewBag.Title = "Meetups";
+    ViewBag.Title = @Model.Heading;
 }
 
 <h2>@Model.Heading</h2>
