--- a/RpgGameHub/Views/Meetup/MeetupForm.cshtml
+++ b/RpgGameHub/Views/Meetup/MeetupForm.cshtml
@@ -9,10 +9,11 @@
 {
     <p class="alert alert-info"> All fields are <strong>required</strong>.</p>
     @Html.AntiForgeryToken()
+    @Html.HiddenFor(m => m.Id)
     <div class="form-group">
         @Html.Label("Rpg Game")
-        @Html.EnumDropDownListFor(model => model.RgpGame,"Select a game", htmlAttributes: new { @class = "form-control", autofocus = "autofocus"})
-        @Html.ValidationMessageFor(model => model.RgpGame)
+        @Html.EnumDropDownListFor(m => m.RgpGame,"Select a game", htmlAttributes: new { @class = "form-control", autofocus = "autofocus"})
+        @Html.ValidationMessageFor(m => m.RgpGame)
     </div>
    <div class="form-group">
         @Html.LabelFor(m => m.Date)
