working Detail View, updated MeetupController to return cancelled meetups, reworked the css for the Mine and MeetupViews

--- a/RpgGameHub/Content/Site.css
+++ b/RpgGameHub/Content/Site.css
@@ -55,6 +55,10 @@ textarea {
 .meetups {
   list-style: none;
 }
+.meetups li > .meetup .date .detail_link {
+  color: white;
+  text-decoration: none;
+}
 .meetups li > .meetup .date .month {
   text-transform: uppercase;
 }
