--- a/RpgGameHub/Content/Site.less
+++ b/RpgGameHub/Content/Site.less
@@ -16,6 +16,7 @@ body {
 	padding-left: 15px;
 	padding-right: 15px;
 }
+
 .form-control {
 	-moz-border-radius:8px;
 	border-radius: 8px;
@@ -68,6 +69,10 @@ textarea {
 	list-style:none;
 	li>.meetup {
 		.date {
+            .detail_link {
+                color:white;
+                text-decoration:none;
+            }
 			.month {
 				text-transform: uppercase;
 			}
