Reworked the GetMeetupDetails Tests to include the RpgGameRef class while testing found bug in  GetMeetupDetails MeetupRepository method

--- a/RpgGameHub/Views/Meetup/Details.cshtml
+++ b/RpgGameHub/Views/Meetup/Details.cshtml
@@ -18,7 +18,7 @@
             <div  class="bg-info">{{meetup.handle}} will be running the meetup on {{meetup.date}} at {{meetup.time}}.</div> 
         </div>
         <div ng-if="meetup.isCancelled">
-            <div class="bg-warning"> {{meetup.handle}} has cancelled the meetup scheduled for {{meetup.date}} at {{meetup.time}}.</div>
+            <div class="bg-danger"> {{meetup.handle}} has cancelled the meetup scheduled for {{meetup.date}} at {{meetup.time}}.</div>
         </div>
     </div>
     <div>
