--- a/RpgGameHub/Content/Site.less
+++ b/RpgGameHub/Content/Site.less
@@ -152,6 +152,31 @@ textarea {
 		}
 	}
 }
+
+.meetupDetails{
+	font-size:20px;
+}
+
+
+.gameName {
+	font-size:24px;
+    -ms-border-radius: 8px;
+    background-color: orange;
+    border-radius: 8px;
+    padding:10px;
+    text-align: center;
+    border-spacing:20px;   
+    .game_link {				
+    color: white;
+	text-decoration:none;
+    }
+}
+
+
+.label-meetup {
+    background-color:@color0
+}
+
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6  {
 	font-family: "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
